cmake_minimum_required(VERSION 3.27)
project(mePAT)

set(CMAKE_CXX_STANDARD 14)

add_executable(mePAT
        "AdvancedLevel_C++/1001. A+B Format (20).cpp"
        "AdvancedLevel_C++/1002. A+B for Polynomials (25).cpp"
        "AdvancedLevel_C++/1003. Emergency (25) .cpp"
        "AdvancedLevel_C++/1004. Counting Leaves (30) .cpp"
        "AdvancedLevel_C++/1005. Spell It Right (20).cpp"
        "AdvancedLevel_C++/1006. Sign In and Sign Out (25).cpp"
        "AdvancedLevel_C++/1007. Maximum Subsequence Sum (25).cpp"
        "AdvancedLevel_C++/1008. Elevator (20).cpp"
        "AdvancedLevel_C++/1009. Product of Polynomials (25).cpp"
        "AdvancedLevel_C++/1010. Radix (25).cpp"
        "AdvancedLevel_C++/1011. World Cup Betting (20).cpp"
        "AdvancedLevel_C++/1012. The Best Rank (25).cpp"
        "AdvancedLevel_C++/1013. Battle Over Cities (25) .cpp"
        "AdvancedLevel_C++/1014. Waiting in Line (30).cpp"
        "AdvancedLevel_C++/1015. Reversible Primes (20).cpp"
        "AdvancedLevel_C++/1016. Phone Bills (25) .cpp"
        "AdvancedLevel_C++/1017. Queueing at Bank (25) .cpp"
        "AdvancedLevel_C++/1018. Public Bike Management (30) .cpp"
        "AdvancedLevel_C++/1019. General Palindromic Number (20).cpp"
        "AdvancedLevel_C++/1020. Tree Traversals (25).cpp"
        "AdvancedLevel_C++/1021. Deepest Root (25) .cpp"
        "AdvancedLevel_C++/1022. Digital Library (30) .cpp"
        "AdvancedLevel_C++/1023. Have Fun with Numbers (20).cpp"
        "AdvancedLevel_C++/1024. Palindromic Number (25) .cpp"
        "AdvancedLevel_C++/1025. PAT Ranking (25).cpp"
        "AdvancedLevel_C++/1026. Table Tennis (30) .cpp"
        "AdvancedLevel_C++/1027. Colors in Mars (20).cpp"
        "AdvancedLevel_C++/1028. List Sorting (25).cpp"
        "AdvancedLevel_C++/1029. Median (25).cpp"
        "AdvancedLevel_C++/1030. Travel Plan (30) .cpp"
        "AdvancedLevel_C++/1031. Hello World for U (20).cpp"
        "AdvancedLevel_C++/1032. Sharing (25).cpp"
        "AdvancedLevel_C++/1033. To Fill or Not to Fill (25) .cpp"
        "AdvancedLevel_C++/1034. Head of a Gang (30) .cpp"
        "AdvancedLevel_C++/1035. Password (20).cpp"
        "AdvancedLevel_C++/1036. Boys vs Girls (25).cpp"
        "AdvancedLevel_C++/1037. Magic Coupon (25).cpp"
        "AdvancedLevel_C++/1038. Recover the Smallest Number (30) .cpp"
        "AdvancedLevel_C++/1039. Course List for Student (25).cpp"
        "AdvancedLevel_C++/1040. Longest Symmetric String (25).cpp"
        "AdvancedLevel_C++/1041. Be Unique (20).cpp"
        "AdvancedLevel_C++/1042. Shuffling Machine (20).cpp"
        "AdvancedLevel_C++/1043. Is It a Binary Search Tree (25).cpp"
        "AdvancedLevel_C++/1044. Shopping in Mars (25) .cpp"
        "AdvancedLevel_C++/1045. Favorite Color Stripe (30) .cpp"
        "AdvancedLevel_C++/1046. Shortest Distance (20).cpp"
        "AdvancedLevel_C++/1047. Student List for Course (25).cpp"
        "AdvancedLevel_C++/1048. Find Coins (25).cpp"
        "AdvancedLevel_C++/1049. Counting Ones (30) .cpp"
        "AdvancedLevel_C++/1050. String Subtraction (20).cpp"
        "AdvancedLevel_C++/1051. Pop Sequence (25) .cpp"
        "AdvancedLevel_C++/1052. Linked List Sorting (25).cpp"
        "AdvancedLevel_C++/1053. Path of Equal Weight (30) .cpp"
        "AdvancedLevel_C++/1054. The Dominant Color (20).cpp"
        "AdvancedLevel_C++/1055. The World's Richest (25) .cpp"
        "AdvancedLevel_C++/1056. Mice and Rice (25).cpp"
        "AdvancedLevel_C++/1057. Stack (30) .cpp"
        "AdvancedLevel_C++/1058. A+B in Hogwarts (20).cpp"
        "AdvancedLevel_C++/1059. Prime Factors (25) .cpp"
        "AdvancedLevel_C++/1060. Are They Equal (25) .cpp"
        "AdvancedLevel_C++/1061. Dating (20).cpp"
        "AdvancedLevel_C++/1062. Talent and Virtue (25).cpp"
        "AdvancedLevel_C++/1063. Set Similarity (25).cpp"
        "AdvancedLevel_C++/1064. Complete Binary Search Tree (30).cpp"
        "AdvancedLevel_C++/1065. A+B and C (64bit) (20).cpp"
        "AdvancedLevel_C++/1066. Root of AVL Tree (25).cpp"
        "AdvancedLevel_C++/1067. Sort with Swap(0,*) (25) .cpp"
        "AdvancedLevel_C++/1068. Find More Coins (30) .cpp"
        "AdvancedLevel_C++/1069. The Black Hole of Numbers (20).cpp"
        "AdvancedLevel_C++/1070. Mooncake (25).cpp"
        "AdvancedLevel_C++/1071. Speech Patterns (25) .cpp"
        "AdvancedLevel_C++/1072. Gas Station (30) .cpp"
        "AdvancedLevel_C++/1073. Scientific Notation (20).cpp"
        "AdvancedLevel_C++/1074. Reversing Linked List (25).cpp"
        "AdvancedLevel_C++/1075. PAT Judge (25) .cpp"
        "AdvancedLevel_C++/1076. Forwards on Weibo (30) .cpp"
        "AdvancedLevel_C++/1077. Kuchiguse (20).cpp"
        "AdvancedLevel_C++/1078. Hashing (25) .cpp"
        "AdvancedLevel_C++/1079. Total Sales of Supply Chain (25) .cpp"
        "AdvancedLevel_C++/1080. Graduate Admission (30) .cpp"
        "AdvancedLevel_C++/1081. Rational Sum (20).cpp"
        "AdvancedLevel_C++/1082. Read Number in Chinese (25) .cpp"
        "AdvancedLevel_C++/1083. List Grades (25).cpp"
        "AdvancedLevel_C++/1084. Broken Keyboard (20).cpp"
        "AdvancedLevel_C++/1085. Perfect Sequence (25).cpp"
        "AdvancedLevel_C++/1086. Tree Traversals Again (25) .cpp"
        "AdvancedLevel_C++/1087. All Roads Lead to Rome (30) .cpp"
        "AdvancedLevel_C++/1088. Rational Arithmetic (20).cpp"
        "AdvancedLevel_C++/1089. Insert or Merge (25).cpp"
        "AdvancedLevel_C++/1090. Highest Price in Supply Chain (25) .cpp"
        "AdvancedLevel_C++/1091. Acute Stroke (30) .cpp"
        "AdvancedLevel_C++/1092. To Buy or Not to Buy (20).cpp"
        "AdvancedLevel_C++/1093. Count PAT's (25).cpp"
        "AdvancedLevel_C++/1094. The Largest Generation (25) .cpp"
        "AdvancedLevel_C++/1095. Cars on Campus (30) .cpp"
        "AdvancedLevel_C++/1096. Consecutive Factors (20).cpp"
        "AdvancedLevel_C++/1097. Deduplication on a Linked List (25) .cpp"
        "AdvancedLevel_C++/1098. Insertion or Heap Sort (25) .cpp"
        "AdvancedLevel_C++/1099. Build A Binary Search Tree (30).cpp"
        "AdvancedLevel_C++/1100. Mars Numbers (20).cpp"
        "AdvancedLevel_C++/1101. Quick Sort (25).cpp"
        "AdvancedLevel_C++/1102. Invert a Binary Tree (25).cpp"
        "AdvancedLevel_C++/1103. Integer Factorization (30) .cpp"
        "AdvancedLevel_C++/1104. Sum of Number Segments (20).cpp"
        "AdvancedLevel_C++/1105. Spiral Matrix (25).cpp"
        "AdvancedLevel_C++/1106. Lowest Price in Supply Chain (25) .cpp"
        "AdvancedLevel_C++/1107. Social Clusters (30).cpp"
        "AdvancedLevel_C++/1108. Finding Average (20).cpp"
        "AdvancedLevel_C++/1109. Group Photo (25).cpp"
        "AdvancedLevel_C++/1110. Complete Binary Tree (25).cpp"
        "AdvancedLevel_C++/1111. Online Map (30) .cpp"
        "AdvancedLevel_C++/1112. Stucked Keyboard (20).cpp"
        "AdvancedLevel_C++/1113. Integer Set Partition (25) .cpp"
        "AdvancedLevel_C++/1114. Family Property (25).cpp"
        "AdvancedLevel_C++/1115. Counting Nodes in a BST (30) .cpp"
        "AdvancedLevel_C++/1116. Come on! Let’s C (20) .cpp"
        "AdvancedLevel_C++/1117. Eddington Number(25) .cpp"
        "AdvancedLevel_C++/1118. Birds in Forest (25) .cpp"
        "AdvancedLevel_C++/1119. Pre- and Post-order Traversals (30) .cpp"
        "AdvancedLevel_C++/1120. Friend Numbers (20) .cpp"
        "AdvancedLevel_C++/1121. Damn Single (25).cpp"
        "AdvancedLevel_C++/1122. Hamiltonian Cycle (25).cpp"
        "AdvancedLevel_C++/1123. Is It a Complete AVL Tree (30).cpp"
        "AdvancedLevel_C++/1124. Raffle for Weibo Followers (20).cpp"
        "AdvancedLevel_C++/1125. Chain the Ropes (25).cpp"
        "AdvancedLevel_C++/1126. Eulerian Path (25).cpp"
        "AdvancedLevel_C++/1127. ZigZagging on a Tree (30) .cpp"
        "AdvancedLevel_C++/1128. N Queens Puzzle (20).cpp"
        "AdvancedLevel_C++/1129. Recommendation System (25) .cpp"
        "AdvancedLevel_C++/1130. Infix Expression (25).cpp"
        "AdvancedLevel_C++/1131. Subway Map (30) .cpp"
        "AdvancedLevel_C++/1132. Cut Integer (20).cpp"
        "AdvancedLevel_C++/1133. Splitting A Linked List (25).cpp"
        "AdvancedLevel_C++/1134. Vertex Cover (25).cpp"
        "AdvancedLevel_C++/1135. Is It A Red-Black Tree (30).cpp"
        "AdvancedLevel_C++/1136. A Delayed Palindrome (20).cpp"
        "AdvancedLevel_C++/1137. Final Grading (25).cpp"
        "AdvancedLevel_C++/1138. Postorder Traversal (25).cpp"
        "AdvancedLevel_C++/1139. First Contact (30).cpp"
        "AdvancedLevel_C++/1140. Look-and-say Sequence (20) .cpp"
        "AdvancedLevel_C++/1141. PAT Ranking of Institutions (25) .cpp"
        "AdvancedLevel_C++/1142. Maximal Clique (25) .cpp"
        "AdvancedLevel_C++/1143. Lowest Common Ancestor (30) .cpp"
        "AdvancedLevel_C++/1144. The Missing Number (20).cpp"
        "AdvancedLevel_C++/1145. Hashing - Average Search Time (25).cpp"
        "AdvancedLevel_C++/1146. Topological Order (25).cpp"
        "AdvancedLevel_C++/1147. Heaps (30) .cpp"
        "AdvancedLevel_C++/1148. Werewolf - Simple Version (20).cpp"
        "AdvancedLevel_C++/1149. Dangerous Goods Packaging (25).cpp"
        "AdvancedLevel_C++/1150. Travelling Salesman Problem (25).cpp"
        "AdvancedLevel_C++/1151. LCA in a Binary Tree (30).cpp"
        "AdvancedLevel_C++/1152. Google Recruitment (20).cpp"
        "AdvancedLevel_C++/1153. Decode Registration Card of PAT (25).cpp"
        "AdvancedLevel_C++/1154. Vertex Coloring (25).cpp"
        "AdvancedLevel_C++/1155. Heap Paths (30).cpp"
        "AdvancedLevel_C++/1156. Sexy Primes (20).cpp"
        "AdvancedLevel_C++/1157. Anniversary (25).cpp"
        "AdvancedLevel_C++/1158. Telefraud Detection (25).cpp"
        "AdvancedLevel_C++/1159. Structure of a Binary Tree (30).cpp"
        "AdvancedLevel_C++/1160. Forever (20).cpp"
        "AdvancedLevel_C++/1161. Merging Linked Lists (25).cpp"
        "AdvancedLevel_C++/1162. Postfix Expression (25).cpp"
        "AdvancedLevel_C++/1163. Dijkstra Sequence (30).cpp"
        "AdvancedLevel_C++/1164. Good in C (20).cpp"
        "AdvancedLevel_C++/1165. Block Reversing (25).cpp"
        "AdvancedLevel_C++/1166. Summit (25).cpp"
        "AdvancedLevel_C++/1167. Cartesian Tree (30).cpp"
        "AdvancedLevel_C++/1168. Prime Day (20).cpp"
        "AdvancedLevel_C++/1169. The Judger (25).cpp"
        "AdvancedLevel_C++/1170. Safari Park (25).cpp"
        "AdvancedLevel_C++/1171. Replacement Selection (30).cpp"
        "AdvancedLevel_C++/1172. Panda and PP Milk (20).cpp"
        "AdvancedLevel_C++/1173. How Many Ways to Buy a Piece of Land (25).cpp"
        "AdvancedLevel_C++/1174. Left-View of Binary Tree (25).cpp"
        "AdvancedLevel_C++/1175. Professional Ability Test (30).cpp"
        "BasicLevel_C++/1001. 害死人不偿命的(3n+1)猜想 (15).cpp"
        "BasicLevel_C++/1002. 写出这个数 (20).cpp"
        "BasicLevel_C++/1003. 我要通过！(20).cpp"
        "BasicLevel_C++/1004 成绩排名 (20).cpp"
        "BasicLevel_C++/1005. 继续(3n+1)猜想 (25).cpp"
        "BasicLevel_C++/1006. 换个格式输出整数 (15).cpp"
        "BasicLevel_C++/1007. 素数对猜想 (20).cpp"
        "BasicLevel_C++/1008. 数组元素循环右移问题 (20).cpp"
        "BasicLevel_C++/1009. 说反话 (20).cpp"
        "BasicLevel_C++/1010. 一元多项式求导 (25).cpp"
        "BasicLevel_C++/1011. A+B和C (15).cpp"
        "BasicLevel_C++/1012. 数字分类 (20).cpp"
        "BasicLevel_C++/1013. 数素数 (20).cpp"
        "BasicLevel_C++/1014. 福尔摩斯的约会 (20).cpp"
        "BasicLevel_C++/1015. 德才论 (25).cpp"
        "BasicLevel_C++/1016. 部分A+B (15).cpp"
        "BasicLevel_C++/1017. A除以B (20).cpp"
        "BasicLevel_C++/1018. 锤子剪刀布 (20).cpp"
        "BasicLevel_C++/1019. 数字黑洞 (20).cpp"
        "BasicLevel_C++/1020. 月饼 (25).cpp"
        "BasicLevel_C++/1021. 个位数统计 (15).cpp"
        "BasicLevel_C++/1022. D进制的A+B (20).cpp"
        "BasicLevel_C++/1023. 组个最小数 (20).cpp"
        "BasicLevel_C++/1024. 科学计数法 (20).cpp"
        "BasicLevel_C++/1025. 反转链表 (25).cpp"
        "BasicLevel_C++/1026. 程序运行时间(15).cpp"
        "BasicLevel_C++/1027. 打印沙漏(20).cpp"
        "BasicLevel_C++/1028. 人口普查(20).cpp"
        "BasicLevel_C++/1029. 旧键盘(20).cpp"
        "BasicLevel_C++/1030. 完美数列(25).cpp"
        "BasicLevel_C++/1031. 查验身份证(15).cpp"
        "BasicLevel_C++/1032. 挖掘机技术哪家强(20).cpp"
        "BasicLevel_C++/1033. 旧键盘打字(20).cpp"
        "BasicLevel_C++/1034. 有理数四则运算(20).cpp"
        "BasicLevel_C++/1035. 插入与归并(25).cpp"
        "BasicLevel_C++/1036. 跟奥巴马一起编程(15).cpp"
        "BasicLevel_C++/1037. 在霍格沃茨找零钱（20）.cpp"
        "BasicLevel_C++/1038. 统计同成绩学生(20).cpp"
        "BasicLevel_C++/1039. 到底买不买（20）.cpp"
        "BasicLevel_C++/1040. 有几个PAT(25).cpp"
        "BasicLevel_C++/1041. 考试座位号(15).cpp"
        "BasicLevel_C++/1042. 字符统计(20).cpp"
        "BasicLevel_C++/1043. 输出PATest(20).cpp"
        "BasicLevel_C++/1044. 火星数字(20).cpp"
        "BasicLevel_C++/1045. 快速排序(25).cpp"
        "BasicLevel_C++/1046. 划拳(15).cpp"
        "BasicLevel_C++/1047. 编程团体赛(20).cpp"
        "BasicLevel_C++/1048. 数字加密(20).cpp"
        "BasicLevel_C++/1049. 数列的片段和(20).cpp"
        "BasicLevel_C++/1050. 螺旋矩阵(25).cpp"
        "BasicLevel_C++/1051. 复数乘法 (15).cpp"
        "BasicLevel_C++/1052. 卖个萌 (20).cpp"
        "BasicLevel_C++/1053. 住房空置率 (20).cpp"
        "BasicLevel_C++/1054. 求平均值 (20).cpp"
        "BasicLevel_C++/1055. 集体照 (25).cpp"
        "BasicLevel_C++/1056. 组合数的和(15) .cpp"
        "BasicLevel_C++/1057. 数零壹(20) .cpp"
        "BasicLevel_C++/1058. 选择题(20) .cpp"
        "BasicLevel_C++/1059. C语言竞赛(20).cpp"
        "BasicLevel_C++/1060. 爱丁顿数(25) .cpp"
        "BasicLevel_C++/1061. 判断题(15) .cpp"
        "BasicLevel_C++/1062. 最简分数(20) .cpp"
        "BasicLevel_C++/1063. 计算谱半径(20) .cpp"
        "BasicLevel_C++/1064. 朋友数(20) .cpp"
        "BasicLevel_C++/1065. 单身狗(25).cpp"
        "BasicLevel_C++/1066. 图像过滤(15).cpp"
        "BasicLevel_C++/1067. 试密码(20).cpp"
        "BasicLevel_C++/1068. 万绿丛中一点红(20).cpp"
        "BasicLevel_C++/1069. 微博转发抽奖(20).cpp"
        "BasicLevel_C++/1070. 结绳(25).cpp"
        "BasicLevel_C++/1071. 小赌怡情(15).cpp"
        "BasicLevel_C++/1072. 开学寄语(20).cpp"
        "BasicLevel_C++/1073. 多选题常见计分法(20) .cpp"
        "BasicLevel_C++/1074. 宇宙无敌加法器(20).cpp"
        "BasicLevel_C++/1075. 链表元素分类(25).cpp"
        "BasicLevel_C++/1076. Wifi密码 (15).cpp"
        "BasicLevel_C++/1077. 互评成绩计算 (20).cpp"
        "BasicLevel_C++/1078. 字符串压缩与解压 (20).cpp"
        "BasicLevel_C++/1079. 延迟的回文数 (20).cpp"
        "BasicLevel_C++/1080. MOOC期终成绩 (25).cpp"
        "BasicLevel_C++/1081. 检查密码 (15).cpp"
        "BasicLevel_C++/1082. 射击比赛 (20).cpp"
        "BasicLevel_C++/1083. 是否存在相等的差 (20).cpp"
        "BasicLevel_C++/1084. 外观数列 (20).cpp"
        "BasicLevel_C++/1085. PAT单位排行 (25).cpp"
        "BasicLevel_C++/1086. 就不告诉你 (15).cpp"
        "BasicLevel_C++/1087. 有多少不同的值 (20).cpp"
        "BasicLevel_C++/1088. 三人行 (20).cpp"
        "BasicLevel_C++/1089. 狼人杀-简单版 (20).cpp"
        "BasicLevel_C++/1090. 危险品装箱 (25).cpp"
        "BasicLevel_C++/1091. N-自守数 (15).cpp"
        "BasicLevel_C++/1092. 最好吃的月饼 (20).cpp"
        "BasicLevel_C++/1093. 字符串A+B (20).cpp"
        "BasicLevel_C++/1094. 谷歌的招聘 (20).cpp"
        "BasicLevel_C++/1095. 解码PAT准考证 (25).cpp"
        "BasicLevel_C++/1096. 大美数 (15).cpp"
        "BasicLevel_C++/1097. 矩阵行平移 (20).cpp"
        "BasicLevel_C++/1098. 岩洞施工 (20).cpp"
        "BasicLevel_C++/1099. 性感素数 (20).cpp"
        "BasicLevel_C++/1100. 校庆 (25).cpp"
        "BasicLevel_C++/1101. B是A的多少倍 (15).cpp"
        "BasicLevel_C++/1102. 教超冠军卷 (20).cpp"
        "BasicLevel_C++/1103. 缘分数 (20).cpp"
        "BasicLevel_C++/1104. 天长地久 (20).cpp"
        "BasicLevel_C++/1105. 链表合并 (25).cpp"
        "BasicLevel_C++/1106. 2019数列 (15).cpp"
        "BasicLevel_C++/1107. 老鼠爱大米 (20).cpp"
        "BasicLevel_C++/1108. String复读机 (20).cpp"
        "BasicLevel_C++/1109. 擅长C (20).cpp"
        "BasicLevel_C++/1110. 区块反转 (25).cpp"
        "BasicLevel_C++/1111. 对称日 (15).cpp"
        "BasicLevel_C++/1112. 超标区间 (20).cpp"
        "BasicLevel_C++/1113. 钱串子的加法 (20).cpp"
        "BasicLevel_C++/1114. 全素日 (20).cpp"
        "BasicLevel_C++/1115. 裁判机 (25).cpp"
        "BasicLevel_C++/1116. 多二了一点 (15).cpp"
        "BasicLevel_C++/1117. 数字之王 (20).cpp"
        "BasicLevel_C++/1118. 如需挪车请致电 (20).cpp"
        "BasicLevel_C++/1119. 胖达与盆盆奶 (20).cpp"
        "BasicLevel_C++/1120. 买地攻略 (25).cpp"
        "CCCC-GPLT/L1-001 Hello World .cpp"
        "CCCC-GPLT/L1-002 打印沙漏 .cpp"
        "CCCC-GPLT/L1-003 个位数统计 .cpp"
        "CCCC-GPLT/L1-004 计算摄氏温度 .cpp"
        "CCCC-GPLT/L1-005 考试座位号 .cpp"
        "CCCC-GPLT/L1-006 连续因子.cpp"
        "CCCC-GPLT/L1-007 念数字.cpp"
        "CCCC-GPLT/L1-008 求整数段和.cpp"
        "CCCC-GPLT/L1-009 N个数求和.cpp"
        "CCCC-GPLT/L1-010 比较大小.cpp"
        "CCCC-GPLT/L1-011 A-B.cpp"
        "CCCC-GPLT/L1-012 计算指数.cpp"
        "CCCC-GPLT/L1-013 计算阶乘和.cpp"
        "CCCC-GPLT/L1-014 简单题.cpp"
        "CCCC-GPLT/L1-015 跟奥巴马一起画方块.cpp"
        "CCCC-GPLT/L1-016 查验身份证.cpp"
        "CCCC-GPLT/L1-017 到底有多二.cpp"
        "CCCC-GPLT/L1-018 大笨钟.cpp"
        "CCCC-GPLT/L1-019 谁先倒.cpp"
        "CCCC-GPLT/L1-020 帅到没朋友.cpp"
        "CCCC-GPLT/L1-021 重要的话说三遍.cpp"
        "CCCC-GPLT/L1-022 奇偶分家.cpp"
        "CCCC-GPLT/L1-023 输出GPLT.cpp"
        "CCCC-GPLT/L1-024 后天.cpp"
        "CCCC-GPLT/L1-025 正整数A+B.cpp"
        "CCCC-GPLT/L1-026 I Love GPLT.cpp"
        "CCCC-GPLT/L1-027 出租.cpp"
        "CCCC-GPLT/L1-028 判断素数.cpp"
        "CCCC-GPLT/L1-029 是不是太胖了.cpp"
        "CCCC-GPLT/L1-030 一帮一.cpp"
        "CCCC-GPLT/L1-031 到底是不是太胖了.cpp"
        "CCCC-GPLT/L1-032 Left-pad.cpp"
        "CCCC-GPLT/L1-033 出生年.cpp"
        "CCCC-GPLT/L1-034 点赞.cpp"
        "CCCC-GPLT/L1-035 情人节.cpp"
        "CCCC-GPLT/L1-036 A乘以B.cpp"
        "CCCC-GPLT/L1-037 A除以B.cpp"
        "CCCC-GPLT/L1-038 新世界.cpp"
        "CCCC-GPLT/L1-039 古风排版.cpp"
        "CCCC-GPLT/L1-040 最佳情侣身高差.cpp"
        "CCCC-GPLT/L1-041 寻找250.cpp"
        "CCCC-GPLT/L1-042 日期格式化.cpp"
        "CCCC-GPLT/L1-043 阅览室.cpp"
        "CCCC-GPLT/L1-044 稳赢.cpp"
        "CCCC-GPLT/L1-045 宇宙无敌大招呼.cpp"
        "CCCC-GPLT/L1-046 整除光棍.cpp"
        "CCCC-GPLT/L1-047 装睡.cpp"
        "CCCC-GPLT/L1-048 矩阵A乘以B.cpp"
        "CCCC-GPLT/L1-049 天梯赛座位分配.cpp"
        "CCCC-GPLT/L1-050 倒数第N个字符串.cpp"
        "CCCC-GPLT/L1-051 打折.cpp"
        "CCCC-GPLT/L1-052 2018我们要赢.cpp"
        "CCCC-GPLT/L1-053 电子汪.cpp"
        "CCCC-GPLT/L1-054 福到了.cpp"
        "CCCC-GPLT/L1-055 谁是赢家.cpp"
        "CCCC-GPLT/L1-056 猜数字.cpp"
        "CCCC-GPLT/L1-057 PTA使我精神焕发.cpp"
        "CCCC-GPLT/L1-058 6翻了.cpp"
        "CCCC-GPLT/L1-059 敲笨钟.cpp"
        "CCCC-GPLT/L1-060 心理阴影面积.cpp"
        "CCCC-GPLT/L1-061 新胖子公式.cpp"
        "CCCC-GPLT/L1-062 幸运彩票.cpp"
        "CCCC-GPLT/L1-063 吃鱼还是吃肉.cpp"
        "CCCC-GPLT/L1-064 估值一亿的AI核心代码.cpp"
        "CCCC-GPLT/L1-065 嫑废话上代码.cpp"
        "CCCC-GPLT/L1-066 猫是液体.cpp"
        "CCCC-GPLT/L1-067 洛希极限.cpp"
        "CCCC-GPLT/L1-068 调和平均.cpp"
        "CCCC-GPLT/L1-069 胎压监测.cpp"
        "CCCC-GPLT/L1-070 吃火锅.cpp"
        "CCCC-GPLT/L1-071 前世档案.cpp"
        "CCCC-GPLT/L1-072 刮刮彩票.cpp"
        "CCCC-GPLT/L1-073 人与神.cpp"
        "CCCC-GPLT/L1-074 两个小时学完C语言.cpp"
        "CCCC-GPLT/L1-075 强迫症.cpp"
        "CCCC-GPLT/L1-076 降价提醒机器人.cpp"
        "CCCC-GPLT/L1-077 大笨钟的心情.cpp"
        "CCCC-GPLT/L1-078 吉老师的回归.cpp"
        "CCCC-GPLT/L1-079 天梯赛的善良.cpp"
        "CCCC-GPLT/L1-080 乘法口诀数列.cpp"
        "CCCC-GPLT/L1-081 今天我要赢.cpp"
        "CCCC-GPLT/L1-082 种钻石.cpp"
        "CCCC-GPLT/L1-083 谁能进图书馆.cpp"
        "CCCC-GPLT/L1-084 拯救外星人.cpp"
        "CCCC-GPLT/L1-085 试试手气.cpp"
        "CCCC-GPLT/L1-086 斯德哥尔摩火车上的题.cpp"
        "CCCC-GPLT/L1-087 机工士姆斯塔迪奥.cpp"
        "CCCC-GPLT/L1-088 静静的推荐.cpp"
        "CCCC-GPLT/L1-089 最好的文档.cpp"
        "CCCC-GPLT/L1-090 什么是机器学习.cpp"
        "CCCC-GPLT/L1-091 程序员买包子.cpp"
        "CCCC-GPLT/L1-092 进化论.cpp"
        "CCCC-GPLT/L1-093 猜帽子游戏.cpp"
        "CCCC-GPLT/L1-094 剪切粘贴.cpp"
        "CCCC-GPLT/L1-095 分寝室.cpp"
        "CCCC-GPLT/L1-096 谁管谁叫爹.cpp"
        "CCCC-GPLT/L2-001 紧急救援 .cpp"
        "CCCC-GPLT/L2-002 链表去重.cpp"
        "CCCC-GPLT/L2-003 月饼 .cpp"
        "CCCC-GPLT/L2-004 这是二叉搜索树吗？.cpp"
        "CCCC-GPLT/L2-005 集合相似度.cpp"
        "CCCC-GPLT/L2-006 树的遍历.cpp"
        "CCCC-GPLT/L2-007 家庭房产.cpp"
        "CCCC-GPLT/L2-008 最长对称子串.cpp"
        "CCCC-GPLT/L2-009 抢红包.cpp"
        "CCCC-GPLT/L2-010 排座位.cpp"
        "CCCC-GPLT/L2-011 玩转二叉树.cpp"
        "CCCC-GPLT/L2-012 关于堆的判断 .cpp"
        "CCCC-GPLT/L2-013 红色警报.cpp"
        "CCCC-GPLT/L2-014 列车调度.cpp"
        "CCCC-GPLT/L2-015 互评成绩.cpp"
        "CCCC-GPLT/L2-016 愿天下有情人都是失散多年的兄妹 .cpp"
        "CCCC-GPLT/L2-017 人以群分.cpp"
        "CCCC-GPLT/L2-018 多项式A除以B.cpp"
        "CCCC-GPLT/L2-019 悄悄关注.cpp"
        "CCCC-GPLT/L2-020 功夫传人.cpp"
        "CCCC-GPLT/L2-021 点赞狂魔.cpp"
        "CCCC-GPLT/L2-022 重排链表.cpp"
        "CCCC-GPLT/L2-023 图着色问题.cpp"
        "CCCC-GPLT/L2-024 部落.cpp"
        "CCCC-GPLT/L2-025 分而治之.cpp"
        "CCCC-GPLT/L2-026 小字辈.cpp"
        "CCCC-GPLT/L2-027 名人堂与代金券.cpp"
        "CCCC-GPLT/L2-028 秀恩爱分得快.cpp"
        "CCCC-GPLT/L2-029 特立独行的幸福.cpp"
        "CCCC-GPLT/L2-030 冰岛人.cpp"
        "CCCC-GPLT/L2-031 深入虎穴.cpp"
        "CCCC-GPLT/L2-032 彩虹瓶.cpp"
        "CCCC-GPLT/L2-033 简单计算器.cpp"
        "CCCC-GPLT/L2-034 口罩发放.cpp"
        "CCCC-GPLT/L2-035 完全二叉树的层序遍历.cpp"
        "CCCC-GPLT/L2-036 网红点打卡攻略.cpp"
        "CCCC-GPLT/L2-037 包装机.cpp"
        "CCCC-GPLT/L2-038 病毒溯源.cpp"
        "CCCC-GPLT/L2-039 清点代码库.cpp"
        "CCCC-GPLT/L2-040 哲哲打游戏.cpp"
        "CCCC-GPLT/L2-041 插松枝.cpp"
        "CCCC-GPLT/L2-042 老板的作息表.cpp"
        "CCCC-GPLT/L2-043 龙龙送外卖.cpp"
        "CCCC-GPLT/L2-044 大众情人.cpp"
        "CCCC-GPLT/L2-045 堆宝塔.cpp"
        "CCCC-GPLT/L2-046 天梯赛的赛场安排.cpp"
        "CCCC-GPLT/L2-047 锦标赛.cpp"
        "CCCC-GPLT/L2-048 寻宝图.cpp"
        "CCCC-GPLT/L3-001 凑零钱.cpp"
        "CCCC-GPLT/L3-002 堆栈.cpp"
        "CCCC-GPLT/L3-003 社交集群.cpp"
        "CCCC-GPLT/L3-004 肿瘤诊断.cpp"
        "CCCC-GPLT/L3-005 垃圾箱分布.cpp"
        "CCCC-GPLT/L3-006 迎风一刀斩.cpp"
        "CCCC-GPLT/L3-007 天梯地图 .cpp"
        "CCCC-GPLT/L3-008 喊山 .cpp"
        "CCCC-GPLT/L3-009 长城.cpp"
        "CCCC-GPLT/L3-010 是否完全二叉搜索树.cpp"
        "CCCC-GPLT/L3-011 直捣黄龙.cpp"
        "CCCC-GPLT/L3-012 水果忍者.cpp"
        "CCCC-GPLT/L3-013 非常弹的球.cpp"
        "CCCC-GPLT/L3-014 周游世界.cpp"
        "CCCC-GPLT/L3-015 球队“食物链”.cpp"
        "CCCC-GPLT/L3-016 二叉搜索树的结构.cpp"
        "CCCC-GPLT/L3-017 森森快递.cpp"
        "CCCC-GPLT/L3-019 代码排版.cpp"
        "CCCC-GPLT/L3-020 至多删三个字符.cpp"
        "CCCC-GPLT/L3-021 神坛.cpp"
        "CCCC-GPLT/L3-022 地铁一日游.cpp"
        "CCCC-GPLT/L3-023 计算图.cpp"
        "CCCC-GPLT/L3-025 那就别担心了.cpp"
        "CCCC-GPLT/L3-028 森森旅游.cpp"
        "CCCC-GPLT/L3-029 还原文件.cpp")
